# QtCustomWindow

./: CMakeLists.txt  README.md  debug-vs2017.bat
src/: application.qrc  cmake_config.h  logo.rc  main.cpp  mainwindow.cpp  mainwindow.h
src/lang/: zh_CN.ts
src/res/: zh_CN.qm
src/res/skin/: black.qss
